--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,7 +34,8 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "br.com.programacaonapratica.cuidapet"
-        minSdkVersion 16
+        // ! alterar para versão 18
+        minSdkVersion 18
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
