--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 profile=prod
-base_url=http://localhost:8888
+base_url=http://192.168.15.100:8888
 dio_connectTimeout=30000
 dio_receiveTimeout=30000
 googleApiKey=AIzaSyApf37zicYFGFP8NzcehFxxDDQ9lkZymrM
+dio_debug=false
