--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,11 @@ dependencies:
   google_maps_flutter: ^0.5.27+3
   google_maps_webservice: ^0.0.16
   flutter_typeahead: ^1.8.1
+  intl: ^0.16.1
+  url_launcher: ^5.4.7
+  map_launcher: ^0.4.5
+  flutter_calendar_carousel: ^1.4.12
+  flutter_datetime_picker: ^1.3.8
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -59,6 +64,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^3.3.0
+  effective_dart: ^1.2.0
+  pedantic: ^1.9.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
