--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   map_launcher: ^0.4.5
   flutter_calendar_carousel: ^1.4.12
   flutter_datetime_picker: ^1.3.8
+  firebase_auth: ^0.16.0
+  cloud_firestore: ^0.13.5
 
 
   # The following adds the Cupertino Icons font to your application.
