--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -80,5 +80,7 @@
     <string>yandexmaps</string>
     <string>yandexnavi</string>
 </array>
+<key>NSCameraUsageDescription</key>
+<string>Explanation on why the camera access is needed.</string>
 </dict>
 </plist>
