--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   dio: ^3.0.9
   flutter_secure_storage: ^3.3.3
   shared_preferences: ^0.5.7+2
+  image_picker: ^0.6.6+4
 
   flutter_mobx: ^1.1.0
   mobx: ^1.1.1
@@ -72,6 +73,7 @@ dependencies:
   cloud_firestore: ^0.13.5
   firebase_messaging: ^6.0.15
   flutter_facebook_login: ^3.0.0
+  firebase_storage: ^3.1.6
 
 
   # camera
